--- a/mezzistyle.css
+++ b/mezzistyle.css
@@ -8,11 +8,9 @@ body{
   width: 100%
 }
 
-.center {
-  margin: auto;
-  width: 50%;
-  border: 3px solid green;
-  padding: 10px;
+h1{
+  color:red;
+  padding-top: 20px;
 }
 
 h1,h2,h3{
@@ -30,16 +28,6 @@ a{
 table{
   padding-top: 50px;
   padding-left: 50px
-}
-
-.imgmezzi{
-  width: 30%;
-  border: 5px;
-  
-}
-
-#fermate{
-  width: 70%
 }
 
 #instagram{
