--- a/style.css
+++ b/style.css
@@ -15,6 +15,11 @@ body{
   padding: 10px;
 }
 
+h1{
+  color: red;
+  padding-top: 20px
+}
+
 h1,h2,h3{
   color: red
 }
@@ -40,7 +45,10 @@ table{
 
 #fermate{
   width: 70%;
-  float: center
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 20px
 }
 
 #instagram{
